# animeflix

backend/: Cargo.toml  docker-compose.yml
backend/src/: main.rs  tables.sql
backend/src/application/use_cases/: add_episode_to_history.rs  create_user_use_case.rs  get_anime_by_slug_use_case.rs  get_anime_use_case.rs  get_episode_by_slug_and_add_to_history_use_case.rs  get_on_air_animes_use_case.rs  get_user_anime_history_use_case.rs  get_user_from_token_use_case.rs  login_use_case.rs  mod.rs  search_anime_by_filters_use_case.rs  search_anime_use_case.rs
backend/src/domain/entities/: anime.rs  episode.rs  jwt.rs  mod.rs  user.rs  user_history.rs
backend/src/domain/value_objects/: api_response.rs  error.rs  filter.rs  filters.rs  mod.rs  pagination.rs
backend/src/infrastructure/: mod.rs
backend/src/infrastructure/adapters/: animeflv_client.rs  argon_password_encryptor.rs  jwt_encoder.rs  mod.rs  mysql_user_history_repository.rs  mysql_user_repository.rs  sql_user_history_repository.rs  sql_user_repository.rs
backend/src/infrastructure/bootstrap/: container.rs  mod.rs  setup.rs
backend/src/infrastructure/di/: container.rs  mod.rs
backend/src/infrastructure/http/: api_response.rs  mod.rs  route_utils.rs
backend/src/infrastructure/http/extractors/: auth_token_extractor.rs  auth_user_extractor.rs  mod.rs
backend/src/infrastructure/http/routes/: anime_routes.rs  auth_routes.rs  history_routes.rs  mod.rs
backend/src/infrastructure/value_objects/: animeflv_api_response.rs  mod.rs
frontend/: package-lock.json  package.json
frontend/src/: main.tsx
frontend/src/app/hooks/: use-anime-history.ts  use-anime.ts  use-episode.ts  use-observer.ts  use-on-air-animes.ts  use-search-anime.ts  use-search-animes-by-filters.ts
frontend/src/app/providers/: anime-provider.ts  auth-provider.ts
frontend/src/ui/: router.tsx  theme.ts
(+26 files in other folders)
