[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.1", features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
axum = "0.8.8"
serde_json = "1.0.149"
url = "2.5.8"
thiserror = "2.0.17"
tower-http = { version = "0.6.8", features = ["cors"] }
sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "postgres",
  "uuid",
  "chrono"
] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

